# 2026-05-02_laser_detector

./: .gitignore  .secrets.toml.example  CLAUDE.md  DESIGN.md  GOAL.md  README.md  flake.nix  main.py  pyproject.toml  settings.local.toml.example  settings.toml
notes/: HOW_TO_USE.md  architecture_ablation_matrix.md  bias_attribution.md  imwut_ba_findings.md  laptop_friendly_tasks.md  phase1a_calibrated_stratification.md  phase1b_saliency_test.md  phase2_results.md  phase2_worst_dives.md  phase3_final_recipe.md  phase3_results.md  run7_ablation.md  run7_results.md  state.md
scripts/: audit_failures.py  convert_png_cache_to_npy.py  debug_blob_audit.py  eval_checkpoint.py  extract_orf_flip.py  ingest_camera_intrinsics.py  launch_run6_bayer_diff.sh  launch_run7_hrnet.sh  launch_run8_hrnet_smallsigma.sh  prewarm_bayer_excess_cache.py  prewarm_image_cache.py  prewarm_linear_cache.py  run6_chain.sh  run_baseline.py  run_phase0.py  run_train.py  stratify_failures.py  stratify_failures_calibrated.py  sweep_rig_prior.py
scripts/prototype/: phase1b_saliency.py  phase2a_cascade_diag.py  phase2a_heatmap_diag.py  test192_label_check.py
src/laser_detector/: __init__.py  baseline.py  data.py  eval.py  inference.py  model.py  tracking.py  train.py
src/laser_detector/preprocessing/: __init__.py  audit.py  config.py  image_loader.py  ingest.py  line_fit.py  pipeline.py  splits.py  wavelength.py
tests/: test_baseline.py  test_data.py  test_eval.py  test_image_loader.py  test_inference.py  test_model.py  test_phase0_offline.py
